# SDL_helloworld

./: CMakeLists.txt  main.c
